fix: refactor code smell Long Parameter List using Introduce Parameter Object refactoring technique