@@ -1,9 +1,6 @@
 package org.example.studyregistry;
 
-import org.example.studymaterial.Reference;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class StudyTaskManager {
@@ -13,7 +10,7 @@ public class StudyTaskManager {
     List<String> weekResponsibilities = List.of();
 
     private StudyTaskManager(){
-        this.registryList = new ArrayList<Registry>();
+        this.registryList = new ArrayList<>();
     }
 
     public static StudyTaskManager getStudyTaskManager(){
@@ -27,26 +24,47 @@ public class StudyTaskManager {
         return weekResponsibilities;
     }
 
-    public void setUpWeek(String planName, String objectiveTitle, String objectiveDescription, String materialTopic,
-                          String materialFormat, String goal, String reminderTitle, String reminderDescription,
-                          String mainTaskTitle, String mainHabit, String mainCardStudy){
-        this.weekResponsibilities = new ArrayList<>();
-        this.weekResponsibilities.addAll(Arrays.asList(planName, objectiveTitle, objectiveDescription, materialTopic, materialFormat, goal, reminderTitle, reminderDescription, mainTaskTitle, mainHabit, mainCardStudy));
+    public void setUpWeek(WeekSetupParameters params){
+        this.weekResponsibilities = List.of(
+                params.planName(),
+                params.objectiveTitle(),
+                params.objectiveDescription(),
+                params.materialTopic(),
+                params.materialFormat(),
+                params.goal(),
+                params.reminderTitle(),
+                params.reminderDescription(),
+                params.mainTaskTitle(),
+                params.mainHabit(),
+                params.mainCardStudy()
+        );
     }
 
     public void handleSetUpWeek(List<String> stringProperties){
-        setUpWeek(stringProperties.get(0), stringProperties.get(1), stringProperties.get(2), stringProperties.get(3),
-                stringProperties.get(4), stringProperties.get(5), stringProperties.get(6), stringProperties.get(7),
-                stringProperties.get(8), stringProperties.get(9), stringProperties.get(10));
+        WeekSetupParameters params = new WeekSetupParameters(
+                stringProperties.get(0),
+                stringProperties.get(1),
+                stringProperties.get(2),
+                stringProperties.get(3),
+                stringProperties.get(4),
+                stringProperties.get(5),
+                stringProperties.get(6),
+                stringProperties.get(7),
+                stringProperties.get(8),
+                stringProperties.get(9),
+                stringProperties.get(10)
+        );
+        setUpWeek(params);
     }
-
 
     public void addRegistry(Registry registry){
         registryList.add(registry);
     }
+
     public void removeRegistry(Registry registry){
         registryList.remove(registry);
     }
+
     public List<Registry> getRegistryList(){
         return registryList;
     }
@@ -54,12 +72,25 @@ public class StudyTaskManager {
     public List<String> searchInRegistries(String text){
         List<String> response = new ArrayList<>();
         for(Registry registry : registryList){
-            String mix = (registry.getName() != null ? registry.getName() : "");
-            if (mix.toLowerCase().contains(text.toLowerCase())){
-                response.add(registry.getName());
+            String name = registry.getName() != null ? registry.getName() : "";
+            if (name.toLowerCase().contains(text.toLowerCase())){
+                response.add(name);
             }
         }
         return response;
     }
 
+    public record WeekSetupParameters(
+            String planName,
+            String objectiveTitle,
+            String objectiveDescription,
+            String materialTopic,
+            String materialFormat,
+            String goal,
+            String reminderTitle,
+            String reminderDescription,
+            String mainTaskTitle,
+            String mainHabit,
+            String mainCardStudy
+    ) {}
 }
